--- a/package.json
+++ b/package.json
@@ -2,28 +2,27 @@
   "name": "cached-community",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "private": true,
   "scripts": {
-    "watch": "./node_modules/webpack/bin/webpack.js --watch --progress --config webpack.dev.js",
-    "build": "./node_modules/webpack/bin/webpack.js --progress --config webpack.prod.js"
+    "watch": "wp-scripts start src/api-client.js src/gutenberg.js --output-path=public/dist",
+    "build": "wp-scripts build src/api-client.js src/gutenberg.js --output-path=public/dist"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/palasthotel/cached-community.git"
   },
-  "author": "",
+  "author": "Edward Bock",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/palasthotel/cached-community/issues"
   },
   "homepage": "https://github.com/palasthotel/cached-community#readme",
-  "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/preset-env": "^7.12.11",
-    "babel-loader": "^8.2.2",
-    "compression-webpack-plugin": "^7.1.2",
-    "webpack": "^5.15.0",
-    "webpack-cli": "^4.3.1",
-    "webpack-merge": "^5.7.3"
+  "dependencies": {
+    "@wordpress/components": "^14.1.5",
+    "@wordpress/data": "^5.1.2",
+    "@wordpress/dom-ready": "^3.1.1",
+    "@wordpress/edit-post": "^4.1.14",
+    "@wordpress/plugins": "^3.1.2",
+    "@wordpress/scripts": "^16.1.4"
   }
 }
